refactor: update structures